--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -85,6 +85,6 @@
     "vaccine8" : "Hepatit A aşısı",
     "vaccine9" : "Tetanoz aşısı",
     "all" : "Tümü",
-    "anyData" : "Herhangi bir dataya sahip değilsiniz."
-
+    "anyData" : "Herhangi bir dataya sahip değilsiniz.",
+    "subject" : "Lütfen eleştiri ve önerilerinizi bizimle paylaşın."
 }
