completed privacy policy and terms of use page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -86,5 +86,42 @@
     "vaccine9" : "Tetanus vaccine",
     "all" : "All",
     "anyData" : "You don't have any data.",
-    "subject" : "Please share your criticisms and suggestions with us."
-}
+    "subject" : "Please share your criticisms and suggestions with us.",
+    "term1" : "Baby Tracker Application Terms of Use",
+    "term2" : "Last Update Date: 30.01.2023",
+    "term3" : "Please read this document carefully and make sure you understand the following terms of use before starting to use the Baby Tracker application.",
+    "term4" : "1. Accepted Conditions:",
+    "term5" : "By using the Baby Tracker application, you declare that you fully understand and accept the following terms of use. It is important to check the updated terms when there is any change in the conditions.",
+    "term6" : "2. User Responsibility:",
+    "term7" : "While using the Baby Tracker application, you must ensure that the information you provide is accurate, up-to-date, and complete. Additionally, it is prohibited to disturb other users, use offensive language, or engage in activities that violate the law through the use of the application.",
+    "term8" : "3. Privacy Policy:",
+    "term9" : "You declare that you have reviewed and approved the privacy policy of the Baby Tracker application. The privacy policy explains how personal information is collected, used, and shared.",
+    "term10" : "4. Intellectual Property Rights:",
+    "term11" : "All intellectual property rights on the Baby Tracker application and its content (logos, texts, graphics, etc.) belong to the developing company. Users do not have the right to reproduce, distribute, or modify this content without permission.",
+    "term12" : "5. Links:",
+    "term13" : "The Baby Tracker application may include links to third-party websites or resources. The developing company is not responsible for the content or services accessed through these links.",
+    "term14" : "6. Termination of Service:",
+    "term15" : "The development company reserves the right to terminate the use of the Baby Tracker application at any time without prior notice. In this case, the user's data on the application may be lost.",
+    "term16" : "7. Right to Change:",
+    "term17" : "The terms of use may be updated from time to time. Therefore, it is important for users to check these conditions at regular intervals.",
+    "privacy1" : "Baby Tracker Application Privacy Policy",
+    "privacy2" : "Last Update Date: 30.01.2023",
+    "privacy3" : "Please read this document carefully and make sure you understand the following privacy policy before starting to use the Baby Tracker application.",
+    "privacy4" : "1. Collected Information:",
+    "privacy5" : "The Baby Tracker application collects the baby information entered by users. This information may include the baby's name, date of birth, age, height, weight, and baby pictures. Additionally, through daily records added by users, information such as feeding, vaccinations, sleep, illness, and diaper changes can also be gathered.",
+    "privacy6" : "2. Usage Purposes:",
+    "privacy7" : "The collected information is used to assist users in tracking the development of their babies, recording and organizing daily habits. The application can provide users with suggestions to make more informed decisions in baby care.",
+    "privacy8" : "3. Shared Information:",
+    "privacy9" : "The Baby Tracker application does not share user information with third parties. This information is used only for the purposes determined by the user and is kept confidential.",
+    "privacy10" : "4. Security Measures:",
+    "privacy11" : "The security of user information is important. Baby Tracker makes efforts to ensure the security of information using encryption and other security protocols. However, there is always a security risk in online communication.",
+    "privacy12" : "5. Children's Privacy:",
+    "privacy13" : "The Baby Tracker application is specifically not targeted towards children.",
+    "privacy14" : "6. User Rights:",
+    "privacy15" : "Users have the right to update, edit, or delete baby information through the application. Additionally, in the event of terminating the use of the application, all information will be deleted upon the user's request.",
+    "privacy16" : "7. Cookies and Tracking Technologies:",
+    "privacy17" : "The Baby Tracker application may use cookies and similar tracking technologies to enhance user experience and improve service quality. However, this information is solely used to enhance in-app usage.",
+    "privacy18" : "8. Change Notifications:",
+    "privacy19" : "Our privacy policy may be updated from time to time. In the event of any changes, appropriate communication methods will be used to notify users of the updated policy.",
+    "privacy20" : "This privacy policy aims to protect user privacy for the Baby Tracker application. For more information or any questions, you can send an email to andac_05@hotmail.com."
+    }
