--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -86,5 +86,42 @@
     "vaccine9" : "Tetanoz aşısı",
     "all" : "Tümü",
     "anyData" : "Herhangi bir dataya sahip değilsiniz.",
-    "subject" : "Lütfen eleştiri ve önerilerinizi bizimle paylaşın."
+    "subject" : "Lütfen eleştiri ve önerilerinizi bizimle paylaşın.",
+    "term1" : "Bebek Takip Uygulaması Kullanım koşulları",
+    "term2" : "Son Güncelleme Tarihi: 30.01.2023",
+    "term3" : "Lütfen bu belgeyi dikkatlice okuyun ve Bebek Takip Uygulamasını kullanmaya başlamadan önce aşağıdaki kullanım koşullarını anladığınızdan emin olun.",
+    "term4" : "1. Kabul Edilen Koşullar:",
+    "term5" : "Bebek Takip Uygulamasını kullanarak, aşağıdaki kullanım koşullarını tamamen anladığınızı ve kabul ettiğinizi beyan edersiniz. Kullanım koşullarında herhangi bir değişiklik olduğunda, güncellenmiş koşulları kontrol etmeniz önemlidir.",
+    "term6" : "2. Kullanıcı Sorumluluğu:",
+    "term7" : "Bebek Takip Uygulamasını kullanırken, sağladığınız bilgilerin doğru, güncel ve eksiksiz olduğundan emin olmalısınız. Ayrıca, uygulamayı kullanarak diğer kullanıcıları rahatsız etmek, hakaret etmek veya yasalara aykırı faaliyetlerde bulunmak yasaktır.",
+    "term8" : "3. Gizlilik Politikası:",
+    "term9" : "Bebek Takip Uygulamasının gizlilik politikasını incelediğinizi ve onayladığınızı beyan edersiniz. Gizlilik politikası, kişisel bilgilerin nasıl toplandığını, kullanıldığını ve paylaşıldığını açıklar.",
+    "term10" : "4. Fikri Mülkiyet Hakları:",
+    "term11" : "Bebek Takip Uygulaması ve içeriği üzerindeki tüm fikri mülkiyet hakları (logolar, metinler, grafikler vb.) geliştirici firmaya aittir. Kullanıcılar, izin almadan bu içeriği çoğaltma, dağıtma veya değiştirme hakkına sahip değillerdir.",
+    "term12" : "5. Bağlantılar:",
+    "term13" : "Bebek Takip Uygulaması, üçüncü taraf web sitelerine veya kaynaklara bağlantılar içerebilir. Bu bağlantılar üzerinden erişilen içeriklerden veya hizmetlerden geliştirici firma sorumlu değildir.",
+    "term14" : "6. Hizmetin Sonlandırılması:",
+    "term15" : "Geliştirici firma, herhangi bir nedenle önceden bildirim yapmaksızın Bebek Takip Uygulamasının kullanımını sonlandırma hakkını saklı tutar. Bu durumda, kullanıcının uygulama üzerindeki verileri kaybolabilir.",
+    "term16" : "7. Değişiklik Hakkı:",
+    "term17" : "Kullanım koşulları zaman zaman güncellenebilir. Bu nedenle, kullanıcıların belirli aralıklarla bu koşulları kontrol etmeleri önemlidir.",
+    "privacy1" : "Bebek Takip Uygulaması Gizlilik koşulları",
+    "privacy2" : "Son Güncelleme Tarihi: 30.01.2023",
+    "privacy3" : "Lütfen bu belgeyi dikkatlice okuyun ve Bebek Takip Uygulamasını kullanmaya başlamadan önce aşağıdaki gizlilik koşullarını anladığınızdan emin olun.",
+    "privacy4" : "1. Toplanan Bilgiler:",
+    "privacy5" : "Bebek Takip Uygulaması, kullanıcıların giriş yaptıkları bebek bilgilerini toplar. Bu bilgiler arasında bebek adı, doğum tarihi, yaş, boy, kilo ve bebek resimleri bulunabilir. Ayrıca, kullanıcılar tarafından eklenen günlük kayıtlar aracılığıyla, yemek, aşı, uyku, hastalık ve bez değişimi gibi bilgiler de toplanabilir.",
+    "privacy6" : "2. Kullanım Amaçları:",
+    "privacy7" : "Toplanan bilgiler, kullanıcıların bebeklerinin gelişimini izlemelerine yardımcı olmak, günlük alışkanlıklarını kaydetmelerine ve düzenlemelerine olanak tanımak amacıyla kullanılır. Uygulama, kullanıcılara bebek bakımında daha bilinçli kararlar almaları için öneriler sunabilir.",
+    "privacy8" : "3. Paylaşılan Bilgiler:",
+    "privacy9" : "Bebek Takip Uygulaması, kullanıcı bilgilerini üçüncü taraflarla paylaşmaz. Bu bilgiler, sadece kullanıcı tarafından belirlenen amaçlar doğrultusunda kullanılır ve gizli tutulur.",
+    "privacy10" : "4. Güvenlik Önlemleri:",
+    "privacy11" : "Kullanıcı bilgilerinin güvenliği önemlidir. Bebek Takip Uygulaması, şifreleme ve diğer güvenlik protokollerini kullanarak bilgilerin güvenliğini sağlamak için çaba gösterir. Ancak, internet üzerinden iletişimde her zaman bir güvenlik riski bulunabilir.",
+    "privacy12" : "5. Çocukların Gizliliği:",
+    "privacy13" : "Bebek Takip Uygulaması, özellikle çocukları hedef almayan bir uygulamadır.",
+    "privacy14" : "6. Kullanıcı Hakları:",
+    "privacy15" : "Kullanıcılar, uygulama üzerinden bebek bilgilerini güncelleme, düzenleme veya silme hakkına sahiptirler. Ayrıca, uygulama kullanımını sonlandırma durumunda tüm bilgiler kullanıcının talebi üzerine silinir.",
+    "privacy16" : "7. Çerezler ve İzleme Teknolojileri:",
+    "privacy17" : "Bebek Takip Uygulaması, kullanıcı deneyimini geliştirmek ve hizmet kalitesini artırmak amacıyla çerez ve benzeri izleme teknolojilerini kullanabilir. Ancak, bu bilgiler sadece uygulama içi kullanımı iyileştirmek amacıyla kullanılır.",
+    "privacy18" : "8. Değişiklik Bildirimleri:",
+    "privacy19" : "Gizlilik politikamız zaman zaman güncellenebilir. Herhangi bir değişiklik durumunda, güncellenmiş politikayı kullanıcılara bildirmek için uygun iletişim yöntemleri kullanılacaktır.",
+    "privacy20" : "Bu gizlilik politikası, Bebek Takip Uygulamasının kullanıcı gizliliğini koruma amacı güder. Daha fazla bilgi veya sorularınız için andac_05@hotmail.com adresine e-posta gönderebilirsiniz."
 }
