--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -65,7 +65,7 @@
     "camera" : "Kamera",
     "gallery" : "Galeri",
     "deleteAll" : "Hepsini sil",
-    "nappy1Text" : "Kuru",
+    "nappy1Text" : "Islak",
     "nappy2Text" : "Kirli",
     "nappy3Text" : "Karışık",
     "nappy4Text" : "Kuru",
@@ -77,11 +77,11 @@
     "vaccine" : "Aşı",
     "vaccine1" : "Hepatit B aşısı",
     "vaccine2" : "Tüberküloz aşısı",
-    "vaccine3" : "pnömoni aşısı",
-    "vaccine4" : "suçiçeği aşısı",
-    "vaccine5" : "kızamık aşısı",
-    "vaccine6" : "kızamıkçık aşısı",
-    "vaccine7" : "kabakulak aşısı",
+    "vaccine3" : "Pnömoni aşısı",
+    "vaccine4" : "Suçiçeği aşısı",
+    "vaccine5" : "Kızamık aşısı",
+    "vaccine6" : "Kızamıkçık aşısı",
+    "vaccine7" : "Kabakulak aşısı",
     "vaccine8" : "Hepatit A aşısı",
     "vaccine9" : "Tetanoz aşısı",
     "all" : "Tümü",
@@ -123,5 +123,11 @@
     "privacy17" : "Bebek Takip Uygulaması, kullanıcı deneyimini geliştirmek ve hizmet kalitesini artırmak amacıyla çerez ve benzeri izleme teknolojilerini kullanabilir. Ancak, bu bilgiler sadece uygulama içi kullanımı iyileştirmek amacıyla kullanılır.",
     "privacy18" : "8. Değişiklik Bildirimleri:",
     "privacy19" : "Gizlilik politikamız zaman zaman güncellenebilir. Herhangi bir değişiklik durumunda, güncellenmiş politikayı kullanıcılara bildirmek için uygun iletişim yöntemleri kullanılacaktır.",
-    "privacy20" : "Bu gizlilik politikası, Bebek Takip Uygulamasının kullanıcı gizliliğini koruma amacı güder. Daha fazla bilgi veya sorularınız için andac_05@hotmail.com adresine e-posta gönderebilirsiniz."
+    "privacy20" : "Bu gizlilik politikası, Bebek Takip Uygulamasının kullanıcı gizliliğini koruma amacı güder. Daha fazla bilgi veya sorularınız için andac_05@hotmail.com adresine e-posta gönderebilirsiniz.",
+    "onb1Title" : "Bebeğinizin Aktivitelerini Kolayca Takip Edin.",
+    "onb2Title" : "Bakıcılarla Bağlantıda Kalın.",
+    "onb3Title" : "Bakıcılarla Bağlantıda Kalın.",
+    "onb1Description" : "Bebeğinizin beslenme, alt değiştirme, uyku düzeni ve daha fazlasını takip etmeye başlamak için adım atın...",
+    "onb2Description" : "Bebeğinizin takibini aile üyeleri, bebek bakıcıları veya sağlık sağlayıcılarıyla paylaşın.",
+    "onb3Description" : "Bebeğinizin takibini aile üyeleri, bebek bakıcıları veya sağlık sağlayıcılarıyla paylaşın."
 }
