--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -124,10 +124,10 @@
     "privacy18" : "8. Change Notifications:",
     "privacy19" : "Our privacy policy may be updated from time to time. In the event of any changes, appropriate communication methods will be used to notify users of the updated policy.",
     "privacy20" : "This privacy policy aims to protect user privacy for the Baby Tracker application. For more information or any questions, you can send an email to andac_05@hotmail.com.",
-    "onb1Title" : "Track Your Baby's Activities with Ease",
-    "onb2Title" : "Stay Connected with Caregivers",
-    "onb3Title" : "Stay Connected with Caregivers",
-    "onb1Description" : "Get started with tracking your baby's feedings, diaper changes, sleep patterns, and more...",
-    "onb2Description" : "Share access to your baby's tracker with family members, babysitters, or healthcare providers",
-    "onb3Description" : "Share access to your baby's tracker with family members, babysitters, or healthcare providers"
+    "onb1Title" : "Easily Track Your Baby's Activities.",
+    "onb2Title" : "Easily Manage Feeding and Diaper Habits.",
+    "onb3Title" : "Keep Vaccination and Health Information in One Place.",
+    "onb1Description" : "Take the first step to track your baby's feeding, diaper changing, sleep patterns, and more...",
+    "onb2Description" : "Ensure your baby's healthy growth by tracking their feeding, diaper changes, and food intake times.",
+    "onb3Description" : "Log vaccination schedules and doctor visits to plan ahead and prioritize your baby's health."
     }
