--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -125,9 +125,9 @@
     "privacy19" : "Gizlilik politikamız zaman zaman güncellenebilir. Herhangi bir değişiklik durumunda, güncellenmiş politikayı kullanıcılara bildirmek için uygun iletişim yöntemleri kullanılacaktır.",
     "privacy20" : "Bu gizlilik politikası, Bebek Takip Uygulamasının kullanıcı gizliliğini koruma amacı güder. Daha fazla bilgi veya sorularınız için andac_05@hotmail.com adresine e-posta gönderebilirsiniz.",
     "onb1Title" : "Bebeğinizin Aktivitelerini Kolayca Takip Edin.",
-    "onb2Title" : "Bakıcılarla Bağlantıda Kalın.",
-    "onb3Title" : "Bakıcılarla Bağlantıda Kalın.",
+    "onb2Title" : "Beslenme ve Bez Alışkanlıklarını Kolayca Yönetin.",
+    "onb3Title" : "Aşı ve Sağlık Bilgilerini Tek Yerde Tutun.",
     "onb1Description" : "Bebeğinizin beslenme, alt değiştirme, uyku düzeni ve daha fazlasını takip etmeye başlamak için adım atın...",
-    "onb2Description" : "Bebeğinizin takibini aile üyeleri, bebek bakıcıları veya sağlık sağlayıcılarıyla paylaşın.",
-    "onb3Description" : "Bebeğinizin takibini aile üyeleri, bebek bakıcıları veya sağlık sağlayıcılarıyla paylaşın."
+    "onb2Description" : "Bebeğinizin beslenme, bez takibi ve gıda alımını saatlerini takip ederek sağlıklı büyümesini sağlayın.",
+    "onb3Description" : "Aşı takvimini ve doktor ziyaretlerini kaydederek ziyaretleri planlayın, bebeğinizin sağlığını önceliklendirin."
 }
