fixed code before publish store

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,14 +11,16 @@
     "contact" : "Contact Us",
     "restore" : "Restore Purchase",
     "feedingAppbar" : "Feeding",
-    "time" : "Time",
-    "amount" : "Amount (ml)",
-    "note" : "Note",
+    "time" : "Time*",
+    "amount" : "Amount (ml)*",
+    "note" : "Note*",
+    "noteAll" : "Note",
     "sleepAppbar" : "Sleep",
-    "feelSleep" : "Feel Sleep",
-    "wokeUp" : "Woke up",
-    "sympAppbar" : "Symptomps Time",
+    "feelSleep" : "Feel Sleep*",
+    "wokeUp" : "Woke up*",
+    "sympAppbar" : "Symptomps Time*",
     "symptomos" : "Symptomps",
+    "symptomosTextField" : "Symptomps*",
     "calenderAppbar" : "Calender",
     "noDataText" : "No data about the baby has been\nentered yet.Please enter data.",
     "runnyNoseT" : "Runny Nose",
@@ -70,11 +72,12 @@
     "nappy3Text" : "Mixed",
     "nappy4Text" : "Dry",
     "nappyAppbar" : "Nappy",
-    "nappyTime" : "Nappy Time",
+    "nappyTextField" : "Nappy*",
+    "nappyTime" : "Nappy Time*",
     "nappyStatus" : "Diaper Status",
     "vaccineAppbar" : "Vaccine",
-    "vaccineDate" : "Vaccine Date",
-    "vaccine" : "Vaccine",
+    "vaccineDate" : "Vaccine Date*",
+    "vaccine" : "Vaccine*",
     "vaccine1" : "Hepatitis B Vaccine",
     "vaccine2" : "Tuberculosis Vaccine",
     "vaccine3" : "pneumonia vaccine",
@@ -123,7 +126,7 @@
     "privacy17" : "The Baby Tracker application may use cookies and similar tracking technologies to enhance user experience and improve service quality. However, this information is solely used to enhance in-app usage.",
     "privacy18" : "8. Change Notifications:",
     "privacy19" : "Our privacy policy may be updated from time to time. In the event of any changes, appropriate communication methods will be used to notify users of the updated policy.",
-    "privacy20" : "This privacy policy aims to protect user privacy for the Baby Tracker application. For more information or any questions, you can send an email to andac_05@hotmail.com.",
+    "privacy20" : "This privacy policy aims to protect user privacy for the Baby Tracker application. For more information or any questions, you can send an email to maespaceproducts@gmail.com.",
     "onb1Title" : "Easily Track Your Baby's Activities.",
     "onb2Title" : "Easily Manage Feeding and Diaper Habits.",
     "onb3Title" : "Keep Vaccination and Health Information in One Place.",
