--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -11,14 +11,16 @@
     "contact" : "İletişim",
     "restore" : "Satın Alma İşlemini Geri Yükle",
     "feedingAppbar" : "Beslenme",
-    "time" : "Zaman",
-    "amount" : "Miktar (ml)",
-    "note" : "Not",
+    "time" : "Zaman*",
+    "amount" : "Miktar (ml)*",
+    "note" : "Not*",
+    "noteAll" : "Not",
     "sleepAppbar" : "Uyku",
-    "feelSleep" : "Uykuya dalma zamanı",
-    "wokeUp" : "Uyanma zamanı",
-    "sympAppbar" : "Belirti zamanı",
+    "feelSleep" : "Uykuya dalma zamanı*",
+    "wokeUp" : "Uyanma zamanı*",
+    "sympAppbar" : "Belirti zamanı*",
     "symptomos" : "Belirtiler",
+    "symptomosTextField" : "Belirtiler*",
     "calenderAppbar" : "Takvim",
     "noDataText" : "Bebekle ilgili henüz bir veri girilmedi.Lütfen veri giriniz.",
     "runnyNoseT" : "Burun Akıntısı",
@@ -70,11 +72,12 @@
     "nappy3Text" : "Karışık",
     "nappy4Text" : "Kuru",
     "nappyAppbar" : "Bez",
-    "nappyTime" : "Bez zamanı",
-    "nappyStatus" : "Bez durumu",
+    "nappyTextField" : "Bez*",
+    "nappyTime" : "Bez zamanı*",
+    "nappyStatus" : "Bez durumu*",
     "vaccineAppbar" : "Aşı",
-    "vaccineDate" : "Aşı günü",
-    "vaccine" : "Aşı",
+    "vaccineDate" : "Aşı günü*",
+    "vaccine" : "Aşı*",
     "vaccine1" : "Hepatit B aşısı",
     "vaccine2" : "Tüberküloz aşısı",
     "vaccine3" : "Pnömoni aşısı",
@@ -123,7 +126,7 @@
     "privacy17" : "Bebek Takip Uygulaması, kullanıcı deneyimini geliştirmek ve hizmet kalitesini artırmak amacıyla çerez ve benzeri izleme teknolojilerini kullanabilir. Ancak, bu bilgiler sadece uygulama içi kullanımı iyileştirmek amacıyla kullanılır.",
     "privacy18" : "8. Değişiklik Bildirimleri:",
     "privacy19" : "Gizlilik politikamız zaman zaman güncellenebilir. Herhangi bir değişiklik durumunda, güncellenmiş politikayı kullanıcılara bildirmek için uygun iletişim yöntemleri kullanılacaktır.",
-    "privacy20" : "Bu gizlilik politikası, Bebek Takip Uygulamasının kullanıcı gizliliğini koruma amacı güder. Daha fazla bilgi veya sorularınız için andac_05@hotmail.com adresine e-posta gönderebilirsiniz.",
+    "privacy20" : "Bu gizlilik politikası, Bebek Takip Uygulamasının kullanıcı gizliliğini koruma amacı güder. Daha fazla bilgi veya sorularınız için maespaceproducts@gmail.com adresine e-posta gönderebilirsiniz.",
     "onb1Title" : "Bebeğinizin Aktivitelerini Kolayca Takip Edin.",
     "onb2Title" : "Beslenme ve Bez Alışkanlıklarını Kolayca Yönetin.",
     "onb3Title" : "Aşı ve Sağlık Bilgilerini Tek Yerde Tutun.",
